--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # BlueJ files
 *.ctxt
+*.bluej
 team.defs
 
 # Javadoc files
@@ -26,3 +27,7 @@ target/
 .project
 .settings
 .vscode
+
+#
+*.png
+*.jpg
